# LiftSimulator

./: CMakeLists.txt  Passenger.hpp  README.md  main.cpp
